--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">MVVM</string>
+
+    <string name = "navigation_open">Open Navigation Drawer</string>
+    <string name = "navigation_close">Close Navigation Drawer</string>
+
 </resources>
