--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,12 @@
 <resources>
     <string name="app_name">MVVM</string>
 
-    <string name = "navigation_open">Open Navigation Drawer</string>
-    <string name = "navigation_close">Close Navigation Drawer</string>
+    <string name="navigation_open">Open Navigation Drawer</string>
+    <string name="navigation_close">Close Navigation Drawer</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="facebook_app_id">308385944463303</string>
+    <string name="fb_login_protocol_scheme">fb308385944463303</string>
+
 
 </resources>
